# myai

./: .env.example  .gitignore  BEFORE_AFTER_VISUAL.md  CHANGELOG.md  CHUNKED_TRANSCRIPTION_GUIDE.md  CHUNKED_TRANSCRIPTION_SUMMARY.md  CHUNKING_BUG_ANALYSIS.md  CONTEXT_AWARE_IMPLEMENTATION_SUMMARY.md  CONTINUOUS_OPTIMIZATION_GUIDE.md  DEBUGGING_DECIMALS.md  FLEXIBLE_WAKEWORD_DESIGN.md  FLEXIBLE_WAKEWORD_FINAL_SUMMARY.md  FUTURE_OPTIMIZATIONS.md  INSTALLATION_TESTING_GUIDE.md  LATENCY_ANALYSIS.md  LATENCY_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.md  PIPELINE_VISUALIZATION.md  QUICKSTART.md  RASPBERRY_PI_SETUP.md  README.md  STREAMING_TTS_GUIDE.md  TRANSCRIPTION_ACCURACY_GUIDE.md  TRANSCRIPTION_IMPROVEMENTS_SUMMARY.md  VAD_IMPLEMENTATION_SUMMARY.md  VAD_MIDDLE_GROUND_SOLUTIONS.md  VAD_QUICKREF.md  VOICE_FALLBACK_GUIDE.md  VOLUME_BOOST_QUICKREF.md  VOLUME_THRESHOLD_FIX.md  analyze_failures.py  benchmark_pipeline.py  benchmark_results.csv  check_usage.py  check_version.py  chroma_wrapper.py  compare_benchmarks.py  conversation_tester.py  list_voices.py  main.py  (+21 more)
data/: benchmark_results.csv  memory.json  tts_usage.json
docs/: system_overview.md
lib/: agent.py  llm_wrapper.py  memory.py  prompt_loader.py  speech_to_text.py  text_to_speech.py  tool.py
prompts/: CHANGELOG.md  README.md  VERSION_CONTROL.md  sam_config.yaml  tobias_config.yaml
scripts/: analyze_failures.py  analyze_speech_pauses.py  benchmark_pipeline.py  check_usage.py  check_version.py  compare_benchmarks.py  list_voices.py  record_benchmark_audio.py  record_test_audio.py
tests/: conftest.py
(+98 files in other folders)
