[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myai"
version = "0.1.0"
description = "Voice assistant core package"
authors = [{ name = "ToBeAss" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
